Fix preview picture stretching

--- a/app/assets/stylesheets/api/pictures.scss
+++ b/app/assets/stylesheets/api/pictures.scss
@@ -54,6 +54,7 @@
   height: 270px;
   width: 270px;
   margin: 10px;
+  object-fit: cover;
 }
 
 .dropzone {
